# tree-sitter-just

./: .envrc  .gitignore  Cargo.toml  Justfile  LICENSE  Makefile  README.md  binding.gyp  emcc-name.patch  flake.nix  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/python/tree_sitter_just/: binding.c
bindings/rust/: build.rs  lib.rs
examples/: all-items.just  m1.just
src/: grammar.json  node-types.json  parser.c
test/corpus/: aliases.txt  assignments.txt  backticks.txt  comments.txt  expression_absolute_paths.txt  expression_assert.txt  expression_if_else.txt  expression_join.txt  expression_operators.txt  expression_value_builtin_function_calls.txt  expression_value_function_calls.txt  expression_value_lists.txt  expression_value_parentheses.txt  expression_values.txt  format_backticks.txt  format_strings.txt  functions.txt  imports.txt  indented_backticks.txt  indented_format_backticks.txt  indented_format_strings.txt  indented_normal_strings.txt  indented_raw_format_strings.txt  indented_raw_strings.txt  modules.txt  normal_strings.txt  raw_format_strings.txt  raw_strings.txt  recipe_attributes.txt  recipe_basics.txt  recipe_bodies.txt  recipe_body_shebang.txt  recipe_dependencies.txt  recipe_parameters.txt  recipe_well_known_attributes.txt  settings.txt  shell_expanded_strings.txt  tests.txt
