[package]
name = "tree-sitter-just"
description = "Tree Sitter grammar for Just (https://github.com/casey/just)"
version = "1.0.0+just-1.43.3"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "just"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/poliorcetics/tree-sitter-just"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.87"

[dev-dependencies]
tree-sitter = "0.25.8"
